acertando classes para requisicoes